--- a/package.json
+++ b/package.json
@@ -10,6 +10,13 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.0.7"
+    "@astrojs/react": "^3.0.8",
+    "@astrojs/tailwind": "^5.0.4",
+    "@types/react": "^18.2.45",
+    "@types/react-dom": "^18.2.18",
+    "astro": "^4.0.7",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^3.4.0"
   }
 }
