--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@types/react-dom": "^18.2.18",
     "astro": "^4.0.7",
     "astro-feather": "^1.0.0",
+    "mdast-util-to-string": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "reading-time": "^1.5.0",
     "tailwindcss": "^3.4.0"
   }
 }
