--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "react-dom": "^18.2.0",
     "reading-time": "^1.5.0",
     "tailwindcss": "^3.4.0"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10"
   }
 }
