--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fontsource/noto-sans-tagalog": "^5.0.18",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
+    "@vercel/analytics": "^1.3.1",
     "astro": "^4.0.7",
     "astro-feather": "^1.0.0",
     "markdown-it": "^14.0.0",
