--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/rss": "^4.0.1",
     "@astrojs/sitemap": "^3.0.4",
     "@astrojs/tailwind": "^5.0.4",
+    "@astrojs/vercel": "^7.7.2",
     "@fontsource-variable/noto-emoji": "^5.0.17",
     "@fontsource/noto-sans-tagalog": "^5.0.18",
     "@types/react": "^18.2.45",
